# ebdev

./: .ebdev.toml  .ebdev.ts  .gitignore  Cargo.toml  Dockerfile.build  Makefile  PLAN_MULTI_SESSION.md  README.md  REFACTORING_PLAN.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/cli/tests/: integration_test.rs
crates/ebdev_config/: Cargo.toml
crates/ebdev_config/src/: lib.rs
crates/ebdev_remote/: Cargo.toml
crates/ebdev_remote/src/: bridge.rs  executor.rs  file_ops.rs  lib.rs  local.rs  remote.rs  wasm_host.rs
crates/ebdev_remote/tests/: integration.rs
crates/ebdev_wasm_guest/: Cargo.toml
crates/ebdev_wasm_guest/src/: host.rs  lib.rs  protocol.rs
crates/mutagen_config/: Cargo.toml
crates/mutagen_config/src/: lib.rs
crates/mutagen_runner/: Cargo.toml
crates/mutagen_runner/src/: config.rs  lib.rs  status.rs  tui.rs
crates/mutagen_runner/src/controller/: executor.rs  mod.rs  sync_controller.rs
crates/mutagen_runner/src/reconcile/: actions.rs  mod.rs
crates/mutagen_runner/src/state/: actual.rs  controller.rs  desired.rs  mod.rs
crates/mutagen_runner/tests/: args_tests.rs  docker_integration.rs  integration_tests.rs  real_backend_integration.rs  reconcile_tests.rs
crates/parallel_runner/: Cargo.toml
crates/parallel_runner/examples/: demo.rs
crates/parallel_runner/src/: lib.rs
crates/task_runner/: Cargo.toml
crates/task_runner/src/: backend.rs  command.rs  executor.rs  lib.rs  ui.rs
crates/task_runner/src/ui/: headless.rs  mod.rs  tui.rs  types.rs
crates/task_runner/src/ui/widgets/: command_palette.rs  header.rs  help.rs  mod.rs  task_list.rs  task_output.rs
crates/toolchain/: Cargo.toml
crates/toolchain_deno/: Cargo.toml
crates/toolchain_deno/src/: lib.rs  module_loader.rs  ops.rs  runtime.rs  task_runner.rs  wasm_compiler.rs
crates/toolchain_deno/types/: ebdev.d.ts  ebdev.js
crates/toolchain_ebdev/: Cargo.toml
crates/toolchain_ebdev/src/: install.rs  lib.rs  platform.rs
crates/toolchain_mutagen/: Cargo.toml
crates/toolchain_mutagen/src/: install.rs  lib.rs  platform.rs
crates/toolchain_node/: Cargo.toml
crates/toolchain_node/src/: install.rs  lib.rs  node_env.rs  platform.rs
crates/toolchain_rust/: Cargo.toml
crates/toolchain_rust/src/: install.rs  lib.rs  platform.rs
example/: .ebdev.toml  .ebdev.ts  Dockerfile  Makefile  docker-compose.yml
example/backend/: .ebdev.toml  .ebdev.ts  app.php
example/backend/config-ts/: .ebdev.ts  ebdev.d.ts
example/frontend/: .ebdev.toml  .ebdev.ts  index.html
example/shared/: utils.js
example/tasks/: hello.rs  migrate.rs
