[workspace]
resolver = "2"
members = [
    "crates/toolchain",
    "crates/toolchain_node",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["easybill GmbH"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
flate2 = "1"
tar = "0.4"
xz2 = "0.1"
thiserror = "2"
