[workspace]
resolver = "2"
members = [
    "crates/toolchain",
    "crates/toolchain_node",
    "crates/toolchain_mutagen",
    "crates/toolchain_deno",
    "crates/ebdev_config",
    "crates/mutagen_config",
    "crates/mutagen_runner",
    "crates/parallel_runner",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["easybill GmbH"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
flate2 = "1"
tar = "0.4"
xz2 = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
ratatui = "0.30"
crossterm = "0.28"
serde_json = "1"
crc32fast = "1.4"
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"] }
async-trait = "0.1"
zip = "2"
