[package]
name = "ebdev"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ebdev"
path = "src/main.rs"

[dependencies]
ebdev-toolchain = { path = "../toolchain" }
ebdev-toolchain-node = { path = "../toolchain_node" }
ebdev-toolchain-mutagen = { path = "../toolchain_mutagen" }
ebdev-toolchain-deno = { path = "../toolchain_deno" }
ebdev-task-runner = { path = "../task_runner" }
ebdev-config = { path = "../ebdev_config" }
ebdev-mutagen-config = { path = "../mutagen_config" }
ebdev-mutagen-runner = { path = "../mutagen_runner" }
ebdev_remote = { path = "../ebdev_remote" }
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
