[package]
name = "ebdev"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ebdev"
path = "src/main.rs"

[dependencies]
ebdev-toolchain = { path = "../toolchain" }
ebdev-toolchain-node = { path = "../toolchain_node" }
ebdev-toolchain-mutagen = { path = "../toolchain_mutagen" }
ebdev-toolchain-ebdev = { path = "../toolchain_ebdev" }
ebdev-toolchain-deno = { path = "../toolchain_deno" }
ebdev-task-runner = { path = "../task_runner" }
ebdev-config = { path = "../ebdev_config" }
ebdev_remote = { path = "../ebdev_remote" }
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
crc32fast.workspace = true
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
crc32fast.workspace = true
