[package]
name = "ebdev_remote"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "ebdev_remote"
path = "src/lib.rs"

[[bin]]
name = "ebdev-bridge"
path = "src/bin/bridge.rs"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "process", "sync", "time", "macros", "net", "fs"] }
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "io-util", "process"] }
