[package]
name = "ebdev-mutagen-config"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true
crc32fast.workspace = true
ebdev-toolchain-deno = { path = "../toolchain_deno" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
