[package]
name = "ebdev-mutagen-runner"
version.workspace = true
edition.workspace = true

[dependencies]
ebdev-mutagen-config = { path = "../mutagen_config" }
tokio = { workspace = true, features = ["process", "time", "sync"] }
anyhow.workspace = true
thiserror.workspace = true
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
crc32fast.workspace = true
notify.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
