[package]
name = "ebdev-mutagen-runner"
version.workspace = true
edition.workspace = true

[features]
default = []
test-utils = []

[dependencies]
tokio = { workspace = true, features = ["process", "time", "sync"] }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
ebdev-mutagen-runner = { path = ".", features = ["test-utils"] }
