[package]
name = "ebdev-task-runner"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
crossterm.workspace = true
ratatui.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
portable-pty = "0.8"
vt100 = "0.15"
ansi-to-tui = "8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
