[package]
name = "ebdev-toolchain-deno"
version.workspace = true
edition.workspace = true

[dependencies]
deno_core = "0.370"
deno_ast = { version = "0.52", features = ["transpiling"] }
deno_error = "0.7"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
