[package]
name = "ebdev-toolchain-node"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
reqwest.workspace = true
futures-util.workspace = true
flate2.workspace = true
tar.workspace = true
xz2.workspace = true
thiserror.workspace = true
